@@ -44,7 +44,6 @@ import org.opengis.feature.simple.SimpleFeature;
  *
  * @author bowens, Refractions Research, Inc.
  * @author $Author: sploreg $ (last modification)
- * @source $URL$
  * @version $Id$
  */
 public class ValidationProcessorTest extends DataTestCase {
@@ -101,7 +100,7 @@ public class ValidationProcessorTest extends DataTestCase {
             this.newRoad =
                     SimpleFeatureBuilder.build(
                             this.roadType,
-                            new Object[] {new Integer(2), line(new int[] {1, 2, 1, 2}), "r4"},
+                            new Object[] {Integer.valueOf(2), line(new int[] {1, 2, 1, 2}), "r4"},
                             "road.rd4");
         } catch (IllegalAttributeException e) {
         }
