@@ -26,7 +26,6 @@ import org.geotools.filter.capability.FunctionNameImpl;
 import org.locationtech.jts.geom.Geometry;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_boundaryDimension extends FunctionExpressionImpl {
 
     public static FunctionName NAME =
@@ -50,6 +49,6 @@ public class FilterFunction_boundaryDimension extends FunctionExpressionImpl {
                     "Filter Function problem for function boundaryDimension argument #0 - expected type Geometry");
         }
 
-        return new Integer(StaticGeometry.boundaryDimension(arg0));
+        return Integer.valueOf(StaticGeometry.boundaryDimension(arg0));
     }
 }
