@@ -26,7 +26,6 @@ import org.geotools.filter.capability.FunctionNameImpl;
 import org.locationtech.jts.geom.Geometry;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_contains extends FunctionExpressionImpl {
 
     public static FunctionName NAME =
@@ -72,6 +71,6 @@ public class FilterFunction_contains extends FunctionExpressionImpl {
                     "Filter Function problem for function contains argument #1 - expected type Geometry");
         }
 
-        return new Boolean(StaticGeometry.contains(arg0, arg1));
+        return Boolean.valueOf(StaticGeometry.contains(arg0, arg1));
     }
 }
