@@ -27,7 +27,6 @@ import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.operation.distance3d.Distance3DOp;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_disjoint3D extends FunctionExpressionImpl {
 
     public static FunctionName NAME =
@@ -65,6 +64,6 @@ public class FilterFunction_disjoint3D extends FunctionExpressionImpl {
          * Use the fact that two geometries are disjoint if and only if the distance between them is
          * greated than zero.
          */
-        return new Boolean(Distance3DOp.distance(arg0, arg1) > 0.0);
+        return Boolean.valueOf(Distance3DOp.distance(arg0, arg1) > 0.0);
     }
 }
