@@ -25,7 +25,6 @@ import org.geotools.filter.FunctionExpressionImpl;
 import org.geotools.filter.capability.FunctionNameImpl;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_in7 extends FunctionExpressionImpl {
 
     public static FunctionName NAME =
@@ -119,6 +118,6 @@ public class FilterFunction_in7 extends FunctionExpressionImpl {
                     "Filter Function problem for function in7 argument #7 - expected type Object");
         }
 
-        return new Boolean(StaticGeometry.in7(arg0, arg1, arg2, arg3, arg4, arg5, arg6, arg7));
+        return Boolean.valueOf(StaticGeometry.in7(arg0, arg1, arg2, arg3, arg4, arg5, arg6, arg7));
     }
 }
