@@ -25,7 +25,6 @@ import org.geotools.filter.FunctionExpressionImpl;
 import org.geotools.filter.capability.FunctionNameImpl;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_parseBoolean extends FunctionExpressionImpl {
 
     public static FunctionName NAME =
@@ -49,6 +48,6 @@ public class FilterFunction_parseBoolean extends FunctionExpressionImpl {
                     "Filter Function problem for function parseBoolean argument #0 - expected type String");
         }
 
-        return new Boolean(StaticGeometry.parseBoolean(arg0));
+        return Boolean.valueOf(StaticGeometry.parseBoolean(arg0));
     }
 }
