@@ -25,7 +25,6 @@ import org.geotools.filter.FunctionExpressionImpl;
 import org.geotools.filter.capability.FunctionNameImpl;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_parseLong extends FunctionExpressionImpl {
 
     public static FunctionName NAME =
@@ -46,6 +45,6 @@ public class FilterFunction_parseLong extends FunctionExpressionImpl {
                     "Filter Function problem for function parseLong argument #0 - expected type String");
         }
 
-        return new Long(StaticGeometry.parseLong(arg0));
+        return Long.valueOf(StaticGeometry.parseLong(arg0));
     }
 }
