@@ -25,7 +25,6 @@ import org.geotools.filter.FunctionExpressionImpl;
 import org.geotools.filter.capability.FunctionNameImpl;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_strLength extends FunctionExpressionImpl {
 
     public static FunctionName NAME =
@@ -52,6 +51,6 @@ public class FilterFunction_strLength extends FunctionExpressionImpl {
                     "Filter Function problem for function strLength argument #0 - expected type String");
         }
 
-        return new Integer(StaticGeometry.strLength(arg0));
+        return Integer.valueOf(StaticGeometry.strLength(arg0));
     }
 }
