@@ -25,7 +25,6 @@ import org.geotools.filter.FunctionExpressionImpl;
 import org.geotools.filter.capability.FunctionNameImpl;
 import org.opengis.filter.capability.FunctionName;
 
-/** @source $URL$ */
 public class FilterFunction_round extends FunctionExpressionImpl {
 
     // public static FunctionName NAME = new FunctionNameImpl("round", "float");
@@ -49,6 +48,6 @@ public class FilterFunction_round extends FunctionExpressionImpl {
                     "Filter Function problem for function round argument #0 - expected type float");
         }
 
-        return new Integer(Math.round(arg0));
+        return Integer.valueOf(Math.round(arg0));
     }
 }
