@@ -26,7 +26,7 @@ import java.util.Set;
 import javax.measure.Unit;
 import javax.swing.Icon;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.factory.GeoTools;
+import org.geotools.util.factory.GeoTools;
 import org.opengis.feature.type.Name;
 import org.opengis.filter.Filter;
 import org.opengis.filter.FilterFactory2;
@@ -56,7 +56,6 @@ import org.opengis.util.InternationalString;
  * </ul>
  *
  * @author iant
- * @source $URL$
  * @version $Id$
  */
 public class StyleFactoryImpl extends AbstractStyleFactory
@@ -613,13 +612,13 @@ public class StyleFactoryImpl extends AbstractStyleFactory
             Stroke stroke =
                     createStroke(
                             filterFactory.literal("#000000"),
-                            filterFactory.literal(new Integer(1)));
+                            filterFactory.literal(Integer.valueOf(1)));
 
-            stroke.setDashOffset(filterFactory.literal(new Integer(0)));
+            stroke.setDashOffset(filterFactory.literal(Integer.valueOf(0)));
             stroke.setDashArray(Stroke.DEFAULT.getDashArray());
             stroke.setLineCap(filterFactory.literal("butt"));
             stroke.setLineJoin(filterFactory.literal("miter"));
-            stroke.setOpacity(filterFactory.literal(new Integer(1)));
+            stroke.setOpacity(filterFactory.literal(Integer.valueOf(1)));
 
             return stroke;
         } catch (org.geotools.filter.IllegalFilterException ife) {
