@@ -29,7 +29,6 @@ import junit.framework.Test;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.factory.Hints;
 import org.geotools.feature.SchemaException;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
@@ -37,6 +36,7 @@ import org.geotools.filter.capability.FunctionNameImpl;
 import org.geotools.filter.expression.PropertyAccessor;
 import org.geotools.filter.expression.PropertyAccessorFactory;
 import org.geotools.geometry.jts.JTS;
+import org.geotools.util.factory.Hints;
 import org.junit.Assert;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Envelope;
@@ -83,12 +83,11 @@ import org.opengis.filter.spatial.Within;
  *
  * @author James MacGill, CCG
  * @author Rob Hranac, TOPP
- * @source $URL$
  */
 public class FilterTest extends TestCase {
     /** The logger for the filter module. */
     private static final Logger LOGGER =
-            org.geotools.util.logging.Logging.getLogger("org.geotools.filter");
+            org.geotools.util.logging.Logging.getLogger(FilterTest.class);
 
     /** SimpleFeature on which to preform tests */
     private static SimpleFeature testFeature = null;
@@ -187,12 +186,12 @@ public class FilterTest extends TestCase {
         Object[] attributes = new Object[17];
         GeometryFactory gf = new GeometryFactory(new PrecisionModel());
         attributes[0] = gf.createLineString(coords);
-        attributes[1] = new Boolean(true);
+        attributes[1] = Boolean.valueOf(true);
         attributes[2] = new Character('t');
-        attributes[3] = new Byte("10");
-        attributes[4] = new Short("101");
-        attributes[5] = new Integer(1002);
-        attributes[6] = new Long(10003);
+        attributes[3] = Byte.valueOf("10");
+        attributes[4] = Short.valueOf("101");
+        attributes[5] = Integer.valueOf(1002);
+        attributes[6] = Long.valueOf(10003);
         attributes[7] = new Float(10000.4);
         attributes[8] = new Double(100000.5);
         attributes[9] = "test string data";
@@ -350,21 +349,21 @@ public class FilterTest extends TestCase {
             boolean test2,
             boolean test3)
             throws IllegalFilterException {
-        Literal testLiteral = new LiteralExpressionImpl(new Integer(1001));
+        Literal testLiteral = new LiteralExpressionImpl(Integer.valueOf(1001));
         org.opengis.filter.Filter filter = compare(filterType, testAttribute, testLiteral);
 
         // LOGGER.finer( filter.toString());
         // LOGGER.finer( "contains feature: " + filter.contains(testFeature));
         assertEquals(filter.evaluate(testFeature), test1);
 
-        testLiteral = new LiteralExpressionImpl(new Integer(1002));
+        testLiteral = new LiteralExpressionImpl(Integer.valueOf(1002));
         filter = compare(filterType, testAttribute, testLiteral);
 
         // LOGGER.finer( filter.toString());
         // LOGGER.finer( "contains feature: " + filter.contains(testFeature));
         assertEquals(filter.evaluate(testFeature), test2);
 
-        testLiteral = new LiteralExpressionImpl(new Integer(1003));
+        testLiteral = new LiteralExpressionImpl(Integer.valueOf(1003));
         filter = compare(filterType, testAttribute, testLiteral);
 
         // LOGGER.finer( filter.toString());
@@ -1172,11 +1171,11 @@ public class FilterTest extends TestCase {
 
         literal = new LiteralExpressionImpl(1);
         assertEquals(ExpressionType.LITERAL_INTEGER, Filters.getExpressionType(literal));
-        assertEquals(new Integer(1), literal.evaluate((Feature) null));
+        assertEquals(Integer.valueOf(1), literal.evaluate((Feature) null));
 
         literal = new LiteralExpressionImpl(1L);
         assertEquals(ExpressionType.LITERAL_LONG, Filters.getExpressionType(literal));
-        assertEquals(new Long(1), literal.evaluate((Feature) null));
+        assertEquals(Long.valueOf(1), literal.evaluate((Feature) null));
 
         literal = new LiteralExpressionImpl("string value");
         assertEquals(ExpressionType.LITERAL_STRING, Filters.getExpressionType(literal));
