@@ -74,8 +74,8 @@ import org.opengis.feature.simple.SimpleFeature;
  * information in a shape file
  *
  * @author mcr
- * @source $URL$
  */
+@SuppressWarnings("PMD.SystemPrintln")
 public class Import extends AbstractCmd {
     class ImageFilter extends Object implements FileFilter {
         public ImageFilter(String extension) {
@@ -269,7 +269,7 @@ public class Import extends AbstractCmd {
                 tileTablePrefix = args[i + 1];
                 i++;
             } else if (args[i].equals("-commitCount")) {
-                commitCount = new Integer(args[i + 1]);
+                commitCount = Integer.valueOf(args[i + 1]);
                 i++;
             } else if (args[i].equals("-shape")) {
                 shapeUrl = getURLFromString(args[i + 1]);
