@@ -45,9 +45,9 @@ import javax.media.jai.registry.RenderedRegistryMode;
 import org.geotools.coverage.GridSampleDimension;
 import org.geotools.coverage.grid.AbstractGridCoverage;
 import org.geotools.image.TransfertRectIter;
-import org.geotools.resources.i18n.LoggingKeys;
-import org.geotools.resources.i18n.Loggings;
-import org.geotools.resources.image.ImageUtilities;
+import org.geotools.image.util.ImageUtilities;
+import org.geotools.metadata.i18n.LoggingKeys;
+import org.geotools.metadata.i18n.Loggings;
 
 /**
  * An image that contains transformed samples, specifically this method will transform the NoData
@@ -59,7 +59,6 @@ import org.geotools.resources.image.ImageUtilities;
  * where "CRIF" stands for {@link java.awt.image.renderable.ContextualRenderedImageFactory}. The
  * image operation name is "org.geotools.gce.NoDataReplacer".
  *
- * @source $URL$
  * @version $Id$
  * @author Simone Giannecchini
  * @since 2.2
@@ -170,7 +169,7 @@ public final class NoDataReplacerOpImage extends PointOpImage {
     /**
      * Transform a raster. Only the current band in {@code iterator} will be transformed. The
      * transformed value are write back in the {@code iterator}. If a different destination raster
-     * is wanted, a {@link org.geotools.resources.image.DualRectIter} may be used.
+     * is wanted, a {@link org.geotools.referencing.util.image.DualRectIter} may be used.
      *
      * @param iterator An iterator to iterate among the samples to transform.
      */
@@ -229,7 +228,7 @@ public final class NoDataReplacerOpImage extends PointOpImage {
                     new String[] {"oldNoData", "newNoData", "EPS"}, // Argument names
                     new Class[] {Number.class, Short.class, Double.class}, // Argument classes
                     new Object[] {
-                        new Double(Double.NaN), new Short((short) -9999), new Double(10.0E-6)
+                        new Double(Double.NaN), Short.valueOf((short) -9999), new Double(10.0E-6)
                     }, // Default values for parameters,
                     null // No restriction on valid parameter values.
                     );
